Redefine mediaqueries & Stop input after 5
Redefine media queries to 320px min to represent smaller phones.

Add invisibleScreen to make sure player cannot pick after the
score goes to 5.

--- a/style.css
+++ b/style.css
@@ -119,6 +119,13 @@ body {
     height: auto;
 }
 
+.invisibleScreen{
+    display: none;
+    position: absolute;
+    width: 450px;
+    height: 250px;
+}
+
 .scoreBoard {
     display: flex;
     justify-content: space-around;
@@ -447,47 +454,56 @@ li {
         transform: scale(0,0);
     }
 }
-@media (max-width: 449px){
+@media (min-width:320px) and (max-width: 449px){
+
 
     #startScreen {
-        width: 368px;
-        height: 650px;
+        width: 310px;
+        height: 700px;
     }
 
     #playContainer {
-        width: 368px;
-        height: 650px;
+        width: 310px;
+        height: 700px;
     }
 
     .playerSelection {
         height: 275px;
     }
     
+    .scoreBoard{
+        justify-content: space-evenly;
+    }
+
     .result {
+        justify-content: center;
         font-size: 20px;
-        width: 150px;
+        width: 120px;
     }
-
+    
     #screenResult {
-        width: 368px;
-        height: 650px;
+        width: 310px;
+        height: 700px;
     }
 
+    .finalResult {
+        height: 450px;
+    }
     .winnerGif{
-        bottom: 63%;
+        bottom: 65%;
         width: 200px;
         height: auto;
     } 
     
     .loserGif {
-        top: 13%;
+        top: 12%;
         width: 105px;
         height: auto;
     }
     
     .finalMessage{
-        width: 340px;
-        height: 375px;
+        width: 280px;
+        height: 400px;
     }
 
     @keyframes borderIn{
@@ -498,29 +514,29 @@ li {
         }
     
         25%{
-            width: 340px;
+            width: 280px;
             height: 0px;
     
         }
     
         50% { 
-            height: 375px;
+            height: 400px;
         }
     
         100% {
         }
     }
     .restart{
-        height: 300px;
+        height: 200px;
     }
     #screenCredits{
-        width: 368px;
-        height: 650px;
+        width: 310px;
+        height: 700px;
     }
 
     .textContainer {
-        width: 368px;
-        height: 450px;
+        width: 300px;
+        height: 500px;
     }
 
     
